# Moduri

./: .gitignore  .gitmodules  README.md
Application/: Build.sh  CMakeLists.txt  Flash_OpenOCD.sh  FreeRTOS_Kernel_import.cmake  pico_sdk_import.cmake
Application/SWC/: CMakeLists.txt  main.c
Application/SWC/Blinky/: CMakeLists.txt
Application/SWC/Blinky/Source/: blinky_main.c
Application/SWC/OS/: CMakeLists.txt
Application/SWC/OS/Source/: OS_manager.c
CentralApplication/: client.py  (+4 more)
UnitApplication/: .gitignore  Build.sh  CMakeLists.txt  Clean.sh  Configure.sh  Debug.sh  Debug_Bootloader.sh  ESP-IDF_Terminal.sh  Flash.sh  Flash_Application.sh  Flash_Bootloader.sh  Flash_OpenOCD.sh  FreeRTOS_Kernel_import.cmake  Monitor.sh  README.md  StartGDB_Core0.sh  StartGDB_Core1.sh  StartOpenOCD.sh  gdb_commands_core0.txt  gdb_commands_core1.txt  pico_sdk_import.cmake
UnitApplication/Application/: CMakeLists.txt  application_bank_B.ld  main.c  sdkconfig.old
UnitApplication/Application/Drivers/: CMakeLists.txt
UnitApplication/Application/Drivers/Include/: MMC56x3_wrapper.h
UnitApplication/Application/Drivers/Source/: MMC56x3.cpp  UBLOX_GPS_HAL.c
UnitApplication/Application/HAL/Include/: DMA_HAL.h  I2C_HAL.h
UnitApplication/Application/HAL/Source/: ADC_HAL.c  DMA_HAL.c  GPIO_HAL.c  PIO_HAL.c  SPI_HAL.c  UART_HAL.c  timer_HAL.c
UnitApplication/Application/Misc/Include/: ModuriConfig.h
UnitApplication/Application/Misc/Source/: Common.c
UnitApplication/Application/Monitor/Include/: Monitor_Common.h
UnitApplication/Application/Monitor/Source/: Monitor_main.c
UnitApplication/Application/OS/: CMakeLists.txt
UnitApplication/Application/OS/Source/: OS_manager.c
UnitApplication/Application/PIO/: blink.pio
UnitApplication/Application/WiFi/Include/: WiFi_Common.h  WiFi_OTA_download.h  WiFi_TCP.h
UnitApplication/Application/WiFi/Source/: WiFi_HTTP.c  WiFi_Init.c  WiFi_OTA_download.c  WiFi_TCP.c  WiFi_UDP.c  WiFi_main.c
UnitApplication/Application/components/CAN_HAL/: CMakeLists.txt
UnitApplication/Application/main/: CMakeLists.txt  app_main.c  hello_world_main.c  main.c
UnitApplication/Bootloader/: CMakeLists.txt  bootloader.ld  main.c
UnitApplication/Bootloader/Include/: flash_layout.h  flash_operations.h  metadata.h
UnitApplication/Bootloader/Source/: flash_operations.c  initial_metadata.c
UnitApplication/Common/FlashUtils/Source/: flash_operations.c
UnitApplication/Dependencies/: debugprobe_readme.md
UnitApplication/ESP32/: Build.sh  Flash.sh  InitTarget.sh  Monitor.sh
UnitApplication/ESP32/Application/: sdkconfig  sdkconfig.old
UnitApplication/ESP32/Application/main/: CMakeLists.txt  app_main.c
UnitApplication/ESP32/Tools/REST_API/: REST_Communicator.py
UnitApplication/ESP32/Tools/esp_prog_debugger/: FlashViaJTAG.sh  StartDebug.sh
UnitApplication/Pico2_W/: .gitignore  Build.sh  CMakeLists.txt  Debug_Application.sh  Flash_Application.sh  Flash_Bootloader.sh  FreeRTOS_Kernel_import.cmake  README.md  RunStaticAnalysis.sh  UploadImageToServer.sh  pico_sdk_import.cmake
UnitApplication/Pico2_W/Application/: CMakeLists.txt  application_bank_A.ld  main.c
UnitApplication/Pico2_W/Application/Drivers/: CMakeLists.txt
UnitApplication/Pico2_W/Application/HAL/: CMakeLists.txt
UnitApplication/Pico2_W/Application/Misc/: CMakeLists.txt
UnitApplication/Pico2_W/Application/Monitor/: CMakeLists.txt
UnitApplication/Pico2_W/Application/PIO/: CMakeLists.txt  PWM.pio
UnitApplication/Pico2_W/Application/WiFi/: CMakeLists.txt
UnitApplication/Pico2_W/Bootloader/: CMakeLists.txt  bootloader.ld  main.c  metadata.ld
UnitApplication/Pico2_W/Bootloader/Source/: initial_metadata.c
UnitApplication/Pico2_W/Common/FlashUtils/: CMakeLists.txt
UnitApplication/Pico2_W/Docs/: OTA_Apache2_Setup.md
UnitApplication/Pico2_W/Examples/AT24C32_EEPROM/: README.md  main.c
UnitApplication/Pico2_W/Examples/Button_Debouncer/: main.c
UnitApplication/Pico2_W/Examples/DS3231_RTC/: README.md  main.c
UnitApplication/Pico2_W/Examples/HBridge_Motor/: main.c
UnitApplication/Pico2_W/Examples/MMC56x3_Magnetometer/: README.md  main.c
UnitApplication/Pico2_W/Examples/UBLOX_GPS/: README.md  main.c
UnitApplication/Pico2_W/Examples/VEML7700_ALS/: main.c
UnitApplication/Pico2_W/Tools/: GenerateOTACert.sh  gen_file_hashes.py
UnitApplication/Pico2_W/Tools/GDB_and_OpenOCD/: StartGDB_Core1_app.sh  StartGDB_Core1_boot.sh  StartOpenOCD.sh  dump_banks.gdb
UnitApplication/Pico2_W/output/: analyze_binaries.sh  bootloader.elf  bootloader.elf.map  bootloader.uf2  moduri_bank_A.elf  moduri_bank_A.elf.map  moduri_bank_A.uf2  moduri_bank_B.elf  moduri_bank_B.elf.map  moduri_bank_B.uf2
UnitApplication/SWC/: CMakeLists.txt  application.ld  main.c  picow_access_point.c
UnitApplication/SWC/Comms/: CMakeLists.txt
UnitApplication/SWC/Comms/Include/: WiFi_Common.h  WiFi_Receive.h  WiFi_Transmit.h
UnitApplication/SWC/Comms/Source/: WiFi_Init.c  WiFi_Receive.c  WiFi_Transmit.c
UnitApplication/SWC/Drivers/: CMakeLists.txt
UnitApplication/SWC/Drivers/Include/: MMC56x3.hpp  MMC56x3_wrapper.h
UnitApplication/SWC/Drivers/Source/: MMC56x3.cpp  MMC56x3_wrapper.cpp  SSD1306_HAL.c
UnitApplication/SWC/HAL/: CMakeLists.txt
UnitApplication/SWC/HAL/Include/: ADC_HAL.h  DMA_HAL.h  I2C_HAL.h  PIO_HAL.h  PWM_HAL.h  SSD1306_HAL.h  UART_HAL.h  timer_HAL.h
UnitApplication/SWC/HAL/Source/: DMA_HAL.c  I2C_HAL.c  PIO_HAL.c  PWM_HAL.c  SSD1306_HAL.c  UART_HAL.c  timer_HAL.c
UnitApplication/SWC/PIO/: CMakeLists.txt
UnitApplication/SWC/WiFi/: CMakeLists.txt
UnitApplication/Tools/GDB_and_OpenOCD/: StartGDB_Core0.sh  StartGDB_Core0_app.sh  StartGDB_Core0_boot.sh  StartGDB_Core1.sh  StartOpenOCD.sh
UnitApplication/output/: analyze_binaries.sh  analyze_binary.sh  bootloader.elf  bootloader.elf.map  bootloader.uf2  moduri.elf  moduri.elf.map  moduri.uf2  moduri_bank_A.elf  moduri_bank_A.elf.map  moduri_bank_A.uf2  moduri_bank_B.elf  moduri_bank_B.elf.map  moduri_bank_B.uf2  picow_access_point_background.elf  picow_access_point_background.elf.map  picow_access_point_background.uf2
(+84 files in other folders)
